@@ -21,19 +21,22 @@ public class KafkaHealthPropertiesTest {
 			"kafka.health.topic", "custom-topic",
 			"kafka.health.send-receive-timeout", "1m",
 			"kafka.health.poll-timeout", "2s",
-			"kafka.health.subscription-timeout", "10s"
+			"kafka.health.subscription-timeout", "10s",
+			"kafka.health.cache.maximum-size", "42"
 	));
 
 	private static final ConfigurationPropertySource MILLISECONDS_PROPERTY_SOURCE = new MapConfigurationPropertySource(ImmutableMap.of(
 			"kafka.health.topic", "custom-topic",
 			"kafka.health.send-receive-timeout-ms", "60000",
 			"kafka.health.poll-timeout-ms", "2000",
-			"kafka.health.subscription-timeout-ms", "10000"
+			"kafka.health.subscription-timeout-ms", "10000",
+			"kafka.health.cache.maximum-size", "42"
 	));
 	// @formatter:on
 
 	@ParameterizedTest(name = "using {0} based setters")
 	@MethodSource("configurationPropertySources")
+	@SuppressWarnings("unused")
 	public void test_that_properties_bind_to_KafkaHealthProperties(String sourceName,
 			ConfigurationPropertySource propertySource) {
 
@@ -44,6 +47,7 @@ public class KafkaHealthPropertiesTest {
 		assertThat(kafkaHealthProperties.getSendReceiveTimeout()).isEqualTo(Duration.ofMinutes(1));
 		assertThat(kafkaHealthProperties.getPollTimeout()).isEqualTo(Duration.ofSeconds(2));
 		assertThat(kafkaHealthProperties.getSubscriptionTimeout()).isEqualTo(Duration.ofSeconds(10));
+		assertThat(kafkaHealthProperties.getCache().getMaximumSize()).isEqualTo(42);
 	}
 
 	static Stream<Arguments> configurationPropertySources() {
