@@ -9,6 +9,8 @@
   (https://github.com/deviceinsight/kafka-health-check/issues/17[ISSUE-17])
 * As of now, cache metrics can be exposed. For this purpose, a corresponding MeterRegistry instance must be passed
   when instantiating the Kafka Health Check. (https://github.com/deviceinsight/kafka-health-check/issues/20[ISSUE-20])
+* The cache size can now be configure via the property `kafka.health.cache.maximum-size`.
+  The default value for the cache size is 200. (https://github.com/deviceinsight/kafka-health-check/issues/22[ISSUE-22])
 
 == Version 1.2.0
 
